# how2hax

./: .gitignore  README.md
h2h-ansible/: hosts.yml  pyproject.toml  start.yml
h2h-ansible/roles/dc/defaults/: main.yml
h2h-ansible/roles/dc/handlers/: main.yml
h2h-ansible/roles/dc/tasks/: main.yml
h2h-ansible/roles/dc/tests/: test.yml
h2h-ansible/roles/dc/vars/: main.yml
h2h-ansible/roles/domain/: README.md
h2h-ansible/roles/domain/defaults/: main.yml
h2h-ansible/roles/domain/files/: AddVulns.ps1  ConfigurePermissions.ps1  CreateOU.ps1  CreateUsers.ps1  CreateUsersGroups.ps1  RemoveVulns.ps1  users.json
h2h-ansible/roles/domain/tasks/: add_vulns.yml  configure.yml  main.yml  remove_vulns.yml
h2h-ansible/roles/domain/tests/: test.yml
h2h-ansible/roles/domain/vars/: main.yml
h2h-ansible/roles/wk/defaults/: main.yml
h2h-ansible/roles/wk/handlers/: main.yml
h2h-ansible/roles/wk/tasks/: main.yml
h2h-ansible/roles/wk/tests/: test.yml
h2h-ansible/roles/wk/vars/: main.yml
h2h-ansible/tests/: test_h2h_ansible.py
