[tool.poetry]
name = "h2h-ansible"
version = "0.1.0"
description = ""
authors = ["Piotrek"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^4.0.0"
pywinrm = "^0.4.2"
ansible-lint = "^5.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
